--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">HOME</a> 
   <a href="#faq" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">EDUCATION</a> 
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">ABOUT </a> 
-  <a href="section.html " onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16"> HOBBIES </a> 
+  <a href="section.html " onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">HOBBIES</a> 
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-center w3-padding-16">CONTACT</a>
 </nav>
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-white w3-xlarge w3-padding-16">
-  <span class="w3-left w3-padding">Guided Project Demo </span>
+  <span class="w3-left w3-padding">Siberia3 Version Guided Project</span>
   <a href="javascript:void(0)" class="w3-right w3-button w3-white" onclick="w3_open()">☰</a>
 </header>
 
